2006-02-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Disabled command hashing while
	  building and installing a package.

2007-02-08 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* NEWS, man/pkginfo.1.in: Fixed a couple of typos.

	* etc/REFERENCE.pkg: Changed log_install from `yes' to `no' so that
	  REFERENCE.pkg would no longer appear in the output of pkginfo -a.

	* scripts/pkginfo.in: Fixed a bug where the verbose flag was ignored
	  if more than one package was queried.

2007-02-07 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* NEWS: Documented the changes between Prometheus 0.1 and 0.2.

	* scripts/pkgrm.in: Renamed `pkg_post_remove' to `post_remove_pkg'
	  for consistency's sake.
	* profiles/lfs-6.1/prometheus: Fixed wrong name for the deps array.

2006-02-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* *: Tagged and released Prometheus 0.2-beta1

	* profiles/lfs-6.1/lfs, profiles/lfs-6.1/stage2,
	  profiles/lfs-6.1/rootfs: Fixed the last issues with the LFS profiles.
	* scripts/libprometheus.bash.in: Fixed another bug that cripples the
	  environment during LFS builds.
	* scripts/pkginstall.in: Fixed checking for already installed packges
	  when building LFS.

2006-02-05 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/absolute.cc: Implemented relative function.
	* reroot/libreroot/absolute.h: Added inline in-place conversion
	  functions.

	* reroot/rerootctl/arguments.cc: Made index filename absolute before
	  sending it to rerootd.  Comments ammended.

2006-02-04 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/cstringptr.h: Added.
	* reroot/libreroot/absolute.cc: Use CStringPtr instead of char *, use
	  empty instead of length, added new relative function.

	* reroot/libreroot/message.cc, reroot/rerootctl/arguments.cc: Use empty
	  instead of length.

2006-02-03 Oliver Brakmann <olivebrakmann@users.berlios.de>
